Fixed stacked bar since the graph was cut off annd added hover color

--- a/cpsc583-project/visualizations/stackbar/style.css
+++ b/cpsc583-project/visualizations/stackbar/style.css
@@ -1,6 +1,6 @@
 #SVG_CONTAINER{
-    height: 1080px;
-    width: 1920px;
+    height: 800px;
+    width: 1256px;
 }
 
 text{
